tests/semantic/string_empty/string_empty.err
Error: string literal is empty in file string_empty.dl at line 9
F(x,y) :- F(x,y),  x > "".
-----------------------^---
Error: string literal is empty in file string_empty.dl at line 11
F ("", "foo").
---^-----------
Error: string literal is empty in file string_empty.dl at line 13
F(x,y) :- F(x,y),  F(x,"").
-----------------------^----
Error: string literal is empty in file string_empty.dl at line 15
F(x,y) :- F(x,y),  !F(x,"").
------------------------^----
4 errors generated, evaluation aborted
